<resources>
    <string name="app_name">NativationSample</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="label1">Time generated from liveData builder:</string>
    <string name="label2">Result of the transformation:</string>
    <string name="label3">emit + emitSource pattern</string>
    <string name="label4">Cache + Remote data source</string>
    <string name="refresh_label">Fetch new data</string>
</resources>